--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,4 +2,30 @@ html{
   font-size: 16px;
   font-family: helvetica,sans-serif;
   text-align: left;
+  color:red;
+}
+
+
+header{
+  display: flex;
+  height: 4rem;
+  justify-content: space-between;
+  align-items: center;
+  padding:0 2rem;
+}
+header div{
+  display:flex;
+  line-height: 2;
+  text-transform: uppercase;
+  align-items: center;
+}
+
+header strong{
+  font-weight: bold;
+}
+
+
+header li{
+  display:inline;
+  padding-left: 2rem;
 }
