--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,105 +1,101 @@
-/* @-ms-viewport{
-  width: device-width;
-} */
 html{
-  font-size: 16px;
-  font-family: helvetica,sans-serif;
-  text-align: left;
-  color: #565957;
+ font-size: 16px;
+ font-family: helvetica,sans-serif;
+ text-align: left;
+ color: #565957;
 }
 p,h5 {
 color: gray;
 }
 img{
-    max-width: 100%;
-    height: auto;
-    display:block;
+ max-width: 100%;
+ height: auto;
+ display:block;
 }
 h1{
-  font-size: 3rem;
+ font-size: 3rem;
 }
 h2{
-  font-size: 2.5rem;
+ font-size: 2.5rem;
 }
 h3{
-  font-size: 2rem;
+ font-size: 2rem;
 }
 h4{
-  font-size: 1.25rem;
+ font-size: 1.25rem;
 }
 h1,h2,h3,h4,strong{
-  font-weight: bold;
+ font-weight: bold;
 }
 
 /* Header */
 
 header{
-  display: flex;
-  height: 4rem;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1.5rem;
+ display: flex;
+ height: 4rem;
+ justify-content: space-between;
+ align-items: center;
+ padding: 0 1.5rem;
 }
 header div{
-  display:flex;
-  line-height: 2;
-  text-transform: uppercase;
-  align-items: center;
+ display:flex;
+ line-height: 2;
+ text-transform: uppercase;
+ align-items: center;
 }
 
 header li{
-  display:inline;
-  padding-left: 1rem;
+ display:inline;
+ padding-left: 1rem;
 }
 
 header .icon{
-  display:none;
+ display:none;
 }
 
  @media only screen and (max-width: 623px){
-   header ul{
-     display:none;
-   }
-   header strong, header span{
-     display:none;
-   }
+  header ul{
+   display:none;
+  }
+  header strong, header span{
+   display:none;
+  }
 
-   header .icon{
-     display:block;
-      }
+  header .icon{
+   display:block;
+  }
  }
 
 /* All Containers */
+
  .card{
-   display:flex;
-   padding: 2rem 1.5rem;
+ display:flex;
+ padding: 2rem 1.5rem;
  }
 
 /* first, Second and fourth Container */
 
 .media{
-   width:60%;
-   height: auto;
-   padding-right: 1.5rem;
+ width:60%;
+ height: auto;
+ padding-right: 1.5rem;
 }
 
 .media .image{
-  background-repeat: no-repeat;
-  background-position:center;
-  background-size:cover;
-
+ background-repeat: no-repeat;
+ background-position:center;
+ background-size:cover;
 }
-
 .content{
-  width:40%;
+ width:40%;
 }
 
 /* Second Container and fourth Container */
 
 .card .small{
-  padding: 1rem;
-  width:100%;
-  min-height: 26.5%;
+ padding: 1rem;
+ width:100%;
+ min-height: 26.5%;
 }
 .small .media{
  width:35%;
@@ -107,358 +103,341 @@ header .icon{
  padding: 0;
 }
 .small .image{
-height: 100%;
-width: auto;
-min-height: 100px;
+ height: 100%;
+ width: auto;
+ min-height: 100px;
 }
 .small .content{
-  width:65%;
+ width:65%;
 }
-
 .smallgroup{
-padding: 1rem;
+ padding: 1rem;
 }
-
 .smallgroup h4, .smallgroup p{
-  padding-bottom: .5rem;
+ padding-bottom: .5rem;
 }
-
 
 
 @media only screen and (max-width: 970px) {
-  .media{
-    width: 55%
-  }
-  .content{
-    width:45%;
-  }
+ .media{
+  width: 55%
+ }
+ .content{
+  width:45%;
+ }
 }
+
  @media only screen and (max-width: 820px) {
-  .media{
-    width: 50%
-  }
-  .content{
-    width:50%;
-  }
+ .media{
+  width: 50%
+ }
+ .content{
+  width:50%;
+ }
 }
+
 @media only screen and (max-width: 768px) {
-  .card{
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .media{
-    width: 80%;
-    padding-right: 0rem;
-  }
-  .content{
-    width:80%;
-    padding-top: 2rem;
-  }
-  .card .small{
-  width:93.5%;
-}
+ .card{
+  flex-wrap: wrap;
+  justify-content: center;
+ }
+ .media{
+  width: 80%;
+  padding-right: 0rem;
+ }
+ .content{
+  width:80%;
+  padding-top: 2rem;
+ }
+ .card .small{
+ width:93.5%;
+ }
  .small .media{
-  min-height: 140px;
-  }
-
+ min-height: 140px;
+ }
 }
+
 @media only screen and (max-width: 623px){
-  .card{
-    padding-left:1rem;
-    padding-right: 1rem;
-  }
-  .media{
-    width: 100%;
-
-  }
-  .content{
-    width:100%;
-
-  }
+ .card{
+  padding-left:1rem;
+  padding-right: 1rem;
+ }
+ .media{
+  width: 100%;
+ }
+ .content{
+  width:100%;
+ }
 }
+
 @media only screen and (max-width: 480px){
-  .card{
-    padding-top: 0rem;
-    padding-left:0rem;
-    padding-right: 0rem;
-  }
-  .small .media{
-    width: 100%;
-    height: 12rem;
-  }
-  .small .content{
-    width: 100%;
-  }
+ .card{
+  padding-top: 0rem;
+  padding-left:0rem;
+  padding-right: 0rem;
+ }
+ .small .media{
+  width: 100%;
+  height: 12rem;
+ }
+ .small .content{
+  width: 100%;
+ }
 }
-
 
 /* First Container */
-#one .media {
 
-}
 #one .media .image{
-  background-image: url(../images/banner.jpg);
-  height: 35rem;
-  width:auto;
+ background-image: url(../images/banner.jpg);
+ height: 35rem;
+ width:auto;
 }
-
 #one .content{
-margin: auto 0;
-
+ margin: auto 0;
 }
-
 #one h1,#one h3{
-padding-bottom:3rem;
+ padding-bottom:3rem;
 }
 #one{
-background-color: lightgray;
+ background-color: lightgray;
 }
-.group{
-
+button{
+ color: white;
+ background-color: dimgray;
+ font-size: 1.5rem;
+ text-align: center;
+ padding: .5rem;
+ width:100%;
 }
-
-.button{
-  color: white;
-  background-color: dimgray;
-  font-size: 1.5rem;
-  text-align: center;
-  padding: .5rem;
+button:hover{
+ background-color: slategray;
+ transition-duration: 500ms;
 }
-.button:hover{
-  background-color: slategray;
-  transition-duration: 500ms;
-}
-.button:active{
-  background-color:DARKSLATEGRAY;
+button:active{
+ background-color:DARKSLATEGRAY;
 }
 
 @media only screen and (max-width: 1050px) {
-  #one .media .image{
-    height: 27rem;
-  }
+ #one .media .image{
+  height: 27rem;
+ }
 }
 
 @media only screen and (max-width: 768px) {
-  #one .media .image{
-    height: 20rem;
-  }
-  #one h1{
-    font-size: 2.5rem;
-  }
-  #one h3{
-    font-size: 1.75rem;
-  }
+ #one .media .image{
+  height: 20rem;
+ }
+ #one h1{
+  font-size: 2.5rem;
+ }
+ #one h3{
+  font-size: 1.75rem;
+ }
 
-  #one h1, #one h3{
-    padding-bottom: 2rem;
-  }
-  #one h3{
-    padding-bottom: 1.5rem;
-  }
-}
-
-@media only screen and (max-width: 623px) {
-
+ #one h1, #one h3{
+  padding-bottom: 2rem;
+ }
+ #one h3{
+  padding-bottom: 1.5rem;
+ }
 }
 
 @media only screen and (max-width: 480px) {
-  #one .media .image{
-    height: 17rem;
-  }
-  .group{
-    padding-left:1rem;
-    padding-right: 1rem;
-  }
+ #one .media .image{
+  height: 17rem;
+ }
+ .group{
+  padding-left:1rem;
+  padding-right: 1rem;
+ }
 }
 
+ /* Second Container */
 
-  /* Second Container */
 #twoimage{
-  height: 28rem;
-  background-image: url(../images/information-main.jpg);
+ height: 28rem;
+ background-image: url(../images/information-main.jpg);
 }
 #two .content{
-  margin-top: -1rem;
+ margin-top: -1rem;
 }
 
 #two p{
-  color: #565957;
+ color: #565957;
 }
 
+  /* small images */
 
-    /* small images */
 #orientation{
-  background-image: url(../images/information-orientation.jpg);
+ background-image: url(../images/information-orientation.jpg);
 }
 #campus{
-  background-image: url(../images/information-campus.jpg);
+ background-image: url(../images/information-campus.jpg);
 }
 #guest{
-  background-image: url(../images/information-guest-lecture.jpg);
+ background-image: url(../images/information-guest-lecture.jpg);
 }
-    /* Small images end */
+  /* Small images end */
 
 #two .small:last-child{
-  background-color: lightgray;
+ background-color: lightgray;
 }
 #two .small:{
-  background-color: lightgray;
+ background-color: lightgray;
 }
 
 #two h2{
-  padding-top: 2rem;
+ padding-top: 2rem;
 }
 #two p{
-  color: #565957;
+ color: #565957;
 }
 #two .media p{
-  padding: 1.5rem 0;
+ padding: 1.5rem 0;
 }
-
 a{
-  text-decoration: none;
-  color:blue;
+ text-decoration: none;
+ color:blue;
 }
 a:hover{
-  text-decoration: underline;
-  color:darkblue;
+ text-decoration: underline;
+ color:darkblue;
 }
 a:visited{
 color: teal;
-
 }
 
 @media only screen and (max-width: 1050px) {
-  #twoimage{
-    height: 20rem;
-  }
+ #twoimage{
+  height: 20rem;
+ }
 }
+
 @media only screen and (max-width: 768px) {
-
-  #two .content{
-    /* margin-top: 0rem; */
-  }
-
+ #two .content{
+  padding-top: 1rem;
+ }
+ #two .small .content{
+  padding-top: 2rem;
+ }
 }
+
 @media only screen and (max-width: 480px){
-  #two .media.large{
-    display: none;
-  }
-
-  #orientation{
-    background-image: url(../images/information-orientation-mobile.jpg);
-  }
-  #campus{
-    background-image: url(../images/information-campus-mobile.jpg);
-  }
-  #guest{
-    background-image: url(../images/information-guest-lecture-mobile.jpg);
-  }
-
+ #two .media.large{
+  display: none;
+ }
+ #orientation{
+  background-image: url(../images/information-orientation-mobile.jpg);
+ }
+ #campus{
+  background-image: url(../images/information-campus-mobile.jpg);
+ }
+ #guest{
+  background-image: url(../images/information-guest-lecture-mobile.jpg);
+ }
 }
 
 /* Third Container */
+
 #three{
-  background-color: lightgray;
-  padding: 2rem 3rem 0 3rem;
+ background-color: lightgray;
+ padding: 2rem 2.5rem 0 2.5rem;
 }
 .wrap{
-  display:flex;
-  flex-flow: row wrap;
-  justify-content: center;
+ display:flex;
+ flex-flow: row wrap;
+ justify-content: center;
 }
-
 #three .box{
-  max-width: 30% ;
-  min-width: 28%;
-  flex:1 1;
-  height: auto;
-  overflow: hidden;
-  background-color: white;
-  margin: 1rem 1rem;
-}
-
-.image-box{
-
+ max-width: 30%;
+ min-width: 28%;
+ flex:1 1;
+ height: auto;
+ overflow: hidden;
+ background-color: white;
+ margin: 1rem;
 }
 .text_box{
-  padding:.5rem 1rem 1rem 1rem;
+ padding:.5rem 1rem 1rem 1rem;
 }
-
 #three h4,#three h5,#three p{
-  padding: .5rem  0 .5rem 0;
+ padding: .5rem 0 .5rem 0;
 }
-
 #three h3{
-  text-align: center;
-  margin-bottom: -1rem;
+ text-align: center;
+ margin-bottom: -1rem;
 }
-
 #three h5{
-  text-transform: uppercase;
+ text-transform: uppercase;
 }
-
 #three p{
-  font-weight: normal;
+ font-weight: normal;
 }
 
 @media only screen and (max-width: 1050px) {
-  .wrap{
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
+ .wrap{
+  padding-left: 1rem;
+  padding-right: 1rem;
+ }
 }
+
 @media only screen and (max-width: 970px) {
-   #three .box{
-    max-width: 44%;
-    min-width: 40%;
-  }
+ #three .box{
+  max-width: 44%;
+  min-width: 40%;
+ }
 }
+
 @media only screen and (max-width: 623px){
-  #three{
-    padding: 2rem 0rem 0 0rem;
-  }
-   .wrap{
-    padding: 0rem 1rem;
-  }
-  #three h3{
-    margin-bottom: 0;
-  }
+ #three{
+  padding: 2rem 0rem 2rem 0rem;
+ }
+  .wrap{
+  padding:1rem 0rem;
+ }
+ #three h3{
+  margin-bottom: 0;
+ }
 }
+
 @media only screen and (max-width: 480px){
-#three{
+ #three{
   background-color: white;
-}
-
-.image-box, .text_box h5, .text_box p{
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+ }
+ .image-box, .text_box h5, .text_box p{
   display: none;
-
-}
-#three .box{
-  min-width: 100%;
+ }
+ #three .box{
+  max-width: 100%;
+  min-width: 90%;
   background-color: lightgray;
   margin:1rem 1rem -.5rem 1rem;
-}
+ }
+ .text_box{
+   padding: 0.5rem 1rem 1.5rem 1rem; 
+ }
 }
 
 /* Fourth Container */
 
 #four video{
-  width: 100%;
-  height: auto;
+ width: 100%;
+ height: auto;
 }
 #four .small:first-child{
-  background-color: lightgray;
+ background-color: lightgray;
 }
 #four .small .content{
-  margin: auto 0;
+ margin: auto 0;
 }
 #four{
-  padding-top: 2rem;
+ padding-top: 2rem;
 }
 
 /* small images */
+
 #fisma{
 background-image: url(../images/thesis-fisma.jpg);
 }
@@ -466,52 +445,43 @@ background-image: url(../images/thesis-fisma.jpg);
 background-image: url(../images/thesis-now-and-then.jpg);
 }
 /* Small images end */
+
 #four h3{
-    text-align: center;
-    /* padding:2rem 0 0 0; */
+ text-align: center;
 }
 #four .media h4{
-  padding:1.5rem 0rem 0.5rem 0;
-}
-#four .media p{
-
+ padding:1.5rem 0rem 0.5rem 0;
 }
 
-#four .media{
-
-}
 @media only screen and (max-width: 480px){
-#four .content, #four h4, #four p{
+ #four .content, #four h4, #four p{
   display:none;
-}
-#four .media{
+ }
+ #four .media{
   padding-top: 1rem;
-}
-
-
+ }
 }
 
 /* Footer */
-footer{
-  display: flex;
-  height: 2rem;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding:1rem;
-  border-top: 1px solid lightgray;
-}
 
+footer{
+ display: flex;
+ height: 2rem;
+ justify-content: space-between;
+ align-items: flex-start;
+ padding:1rem;
+ border-top: 1px solid lightgray;
+}
 footer li{
-  display:inline;
-  padding-left: 1rem;
-
+ display:inline;
+ padding-left: 1rem;
 }
+
 @media only screen and (max-width: 623px){
-footer{
+ footer{
   align-items: flex-end;
-}
-footer ul{
+ }
+ footer ul{
   display: none;
-}
-
+ }
 }
